[project]
name = "getting-started-with-streamlit"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "streamlit>=1.36.0",
    "openai>=1.35.14",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/getting_started_with_streamlit"]
